# Agente-Reels

./: .gitignore  README.md  agent.py  package-lock.json  pyproject.toml  requirements.txt  transcripter.py
agent-ui/: package-lock.json
agent-ui/src/hooks/: useSessionLoader.tsx
tmp/: storage.db
tools/: transcription_reader.py
